--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,112 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom Styles for button */
+
+.btn {
+  height: auto;
+  min-height: 0rem;
+}
+
+.btn-circle {
+  width: auto;
+}
+
+/* Custom css for goto top button */
+.top-btn--icon {
+  animation: gototop 1.8s linear infinite alternate-reverse;
+}
+
+@keyframes gototop {
+  0% {
+    transform: translateY(-0.5rem);
+  }
+  100% {
+    transform: translateY(0.5rem);
+  }
+}
+
+/* Custom style at Text area */
+textarea {
+  padding-top: 0.8rem;
+}
+
+/* custom sytel for swiper js */
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.autoplay-progress {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  z-index: 10;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: var(--swiper-auto-count-color);
+}
+
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 4px;
+  stroke: var(--swiper-auto-count-color);
+  fill: none;
+  stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
+}
+
+img {
+  width: 100%;
+  max-height: 750px;
+}
+
+/* Login page Bg-Images Style */
+#login_img {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.295),
+      rgba(0, 0, 0, 0.404)
+    ),
+    url("https://i.ibb.co/3MfRmQZ/login-Abstract.jpg");
+}
+
+/* design of table */
+.table
+  :where(thead tr, tbody tr:not(:last-child), tbody tr:first-child:last-child) {
+  border-bottom-width: 0px;
+}
+
+/* Custom styles for input at search btn */
+.search-input {
+  height: 2.5rem;
+}
+
+/* Custom style for sorting menu */
+.sorting-menu {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+/* Custom css for category and sorted at search bar in surveys page */
+
+.category-select,
+.sorted-select {
+  min-height: 2.5rem;
+  height: 2.5rem;
+}
