--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ textarea {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .autoplay-progress {
